Fix zooming issue and restyle button layout
Buttons now in seperate rows and zooming doesn't move buttons.

By moving the buttons into a div with the canvas itself zooming
will not affect the layout. This rearrangement should fix the layout
on smaller laptop screens, not overlapping.

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
 * {
   font-family: "Roboto", sans-serif;
+  font-weight: bold;
   color: rgb(62, 62, 62);
 }
 
 h1 {
-  font-size: 90px;
+  font-size: 4rem;
 }
 
 #canvas {
@@ -13,6 +14,7 @@ h1 {
   justify-content: center;
   align-items: center;
   height: 80vh;
+  margin: 5vh 5vw;
 }
 
 #canvasContainer {
@@ -25,45 +27,22 @@ h1 {
 
 #canvasSettings {
   display: flex;
+  flex-flow: column wrap;
+  align-items: center;
   justify-content: center;
 }
 
-.topRow {
-  margin-bottom: 20px;
-}
-
 button {
-  width: 150px;
-  height: 45px;
-  border-radius: 15px;
-  border-width: 5px;
-  font-size: 20px;
-  font-weight: bold;
   background-color: white;
+  border-radius: 15px;
+  font-size: 0.9rem;
 }
 
-#colorSettings {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.topRow {
+  margin: 10px;
 }
 
-#colorPicker {
-  width: 150px;
-  height: 45px;
-}
-
-#otherSettings {
-  display: flex;
-  margin: 0 30px;
-  flex-direction: column;
-  align-items: center;
-}
-
-#gridDimensions {
-  display: flex;
-  flex-direction: column;
+#dimensionNum {
   text-align: center;
-  font-weight: bold;
-  font-size: 20px;
+  margin-top: 10px;
 }
